Wrap and hide sensitive data plus other minor fixes.

--- a/basicDashboard/CSS/resultsPageStyle.css
+++ b/basicDashboard/CSS/resultsPageStyle.css
@@ -38,7 +38,7 @@ ul{
     background: #008265;
 }
 
-.compnay-info h3, .company-info ul{
+.company-info h3, .company-info ul{
     text-align: center;
     margin: 0 0 1rem 0;
 }
